Trying to move to JDK14 + Maven